# parrot

./: .gitignore  Cargo.toml  prepair.sh
migrations/2021-05-03-112116_form_trail/: down.sql  up.sql
src/: config.rs  database.rs  errors.rs  form_modal.rs  mailer.rs  main.rs  routes.rs  schema.rs  server.rs  store.rs
src/handlers/: form.rs
src/models/: form_buy.rs  form_register_bu.rs  form_register_ps.rs  form_repair.rs  form_trail.rs  mod.rs
static/asset/css/: brand-selector.js  brand-selector_0120.css  forms_businessreg.css  forms_buy.css  forms_personalreg.css  forms_repair.css  forms_trail.css  master.css  pro_field.css  product.css  product_list.css  series.css
static/asset/js/: master.js  pro_field.js  product.js  product_list.js  series.js
static/html/: index.html
static/html/mdsr/: mdsr.html
static/html/mst/: mst.html
static/html/products/: list1.html  list2.html  list4.html  list5.html  list6.html  p1.html  p10.html  p11.html  p12.html  p13.html  p14.html  p15.html  p16.html  p17.html  p18.html  p19.html  p2.html  p20.html  p21.html  p22.html  p23.html  p24.html  p25.html  p26.html  p27.html  p28.html  p29.html  p3.html  p30.html  p33.html  p34.html  p35.html  p36.html  p37.html  p38.html  p39.html  p4.html  p40.html  p41.html  p42.html  (+32 more)
static/html/ql/: csjc.html  qgjc.html  ql.html  qyjc.html  sszl.html  ydjc.html  yycl.html
static/html/wak/: fj.html  tdbw.html  wak.html  yd.html
static/templates/: error.html  form-businessreg.html  form-buy.html  form-personalreg.html  form-reg_bu.html  form-reg_ps.html  form-repair.html  form-trail.html  mail-buy.html  mail-trail.html  submit-ok.html  table.html
