[package]
name = "parrot"
version = "0.1.0"
authors = ["pfcoder <pfcoder97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2"
actix-web = "3"
actix-files = "0.3"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
handlebars = { version = "3.0.0", features = ["dir_source"] }
serde_json = "1.0"
csv = "1.1"
chrono = "0.4.19"
lettre = "0.10.0-beta.3"