[package]
name = "parrot"
version = "0.1.0"
authors = ["pfcoder <pfcoder97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-http = "2"
actix-web = "3"
actix-files = "0.3"
actix-redis = "0.9.2"
actix-rt = "1"
#async-smtp = "0.4.0"
csv = "1.1"
chrono = "0.4.19"

derive_more = "0.15"
diesel = { version = "1.4.0", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
env_logger = "0.8"
envy = "0.4"
handlebars = { version = "3.0.0", features = ["dir_source"] }

lettre = { version = "0.10.0-beta.3", features = ["builder", "tokio02-native-tls", "tokio02"] }
tokio = { version = "0.2", features = ["macros"] }

lazy_static = "1.4"
redis-async = "0.6.1"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"]}